syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.${{values.java_package_name_grpc}}.grpc";
option java_outer_classname = "HelloProto";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}
